--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,12 @@ code {
   border: none;
   transition: opacity 0.3s;
 }
+a.btn:link, a.btn:visited {
+  color: inherit;
+  text-decoration: none;
+}
 .btn:hover {
+  text-decoration: none;
   opacity: 0.75;
 }
 
