--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 code {
